--- a/SimpleQuizApp/app/src/main/AndroidManifest.xml
+++ b/SimpleQuizApp/app/src/main/AndroidManifest.xml
@@ -10,8 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleQuizApp">
         <activity
+            android:name=".QuizQuestionsActivity"
+            android:exported="true"
+            android:theme="@style/NoActionBarTheme"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
