--- a/Udemy Course/CountTimeApp/app/build.gradle
+++ b/Udemy Course/CountTimeApp/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.a7minutesworkout"
+        applicationId "com.example.counttimeapp"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -28,10 +28,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-
-    buildFeatures{
-        viewBinding true
     }
 }
 
