--- a/Udemy Course/CountTimeApp/app/src/main/AndroidManifest.xml
+++ b/Udemy Course/CountTimeApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a7minutesworkout">
+    package="com.example.counttimeapp">
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.7MinutesWorkout">
-        <activity
-            android:name=".ExerciseActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.CountTimeApp">
         <activity
             android:name=".MainActivity"
             android:exported="true">
