--- a/Udemy Course/7MinutesWorkout/app/src/main/AndroidManifest.xml
+++ b/Udemy Course/7MinutesWorkout/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a7minutesworkout">
 
+    <!--Todo 1 enable TTS for Android 11-->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
