--- a/Udemy Course/NewConcept/app/src/main/AndroidManifest.xml
+++ b/Udemy Course/NewConcept/app/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a7minutesworkout">
-    <!-- Todo 1 enable TTS for Android 11 -->
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
-        </intent>
-    </queries>
+    package="com.example.newconcept">
 
     <application
         android:allowBackup="true"
@@ -14,19 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.7MinutesWorkout">
-        <activity
-            android:name=".HistoryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BMIActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FinishActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ExerciseActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.NewConcept">
         <activity
             android:name=".MainActivity"
             android:exported="true">
